feat: adiciona 3º Meta Pixel (1067015452178957)

--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
       src="https://www.facebook.com/tr?id=1138664231680524&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
+
+    <!-- Meta Pixel Code - Pixel 3 -->
+    <script>
+      fbq('init', '1067015452178957');
+      fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1067015452178957&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
     
     <!-- TikTok Pixel Code -->
     <script>
