--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
       src="https://www.facebook.com/tr?id=1067015452178957&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
+
+    <!-- Meta Pixel Code - Pixel 4 -->
+    <script>
+      fbq('init', '2030636494451859');
+      fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=2030636494451859&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
     
     <!-- TikTok Pixel Code -->
     <script>
