perf: preconnect + dns-prefetch para checkout (acelera handshake)

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="dns-prefetch" href="https://scripts.converteai.net">
     <link rel="dns-prefetch" href="https://images.converteai.net">
     <link rel="dns-prefetch" href="https://api.vturb.com.br">
+    <!-- Acelera handshake do checkout -->
+    <link rel="preconnect" href="https://go.papainoeloficial.shop" crossorigin>
+    <link rel="dns-prefetch" href="https://go.papainoeloficial.shop">
     <title>natal</title>
     
     <!-- Meta Pixel Code - Pixel 1 -->
