chore: atualizar checkout URL para clkdmg.site

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="dns-prefetch" href="https://images.converteai.net">
     <link rel="dns-prefetch" href="https://api.vturb.com.br">
     <!-- Acelera handshake do checkout -->
-    <link rel="preconnect" href="https://go.papainoeloficial.shop" crossorigin>
-    <link rel="dns-prefetch" href="https://go.papainoeloficial.shop">
+    <link rel="preconnect" href="https://clkdmg.site" crossorigin>
+    <link rel="dns-prefetch" href="https://clkdmg.site">
     <title>natal</title>
     
     <!-- Meta Pixel Code - Pixel 1 -->
