feat: adiciona Meta Pixel 1398924471788992

--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
       src="https://www.facebook.com/tr?id=2030636494451859&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
+
+    <!-- Meta Pixel Code - Pixel 5 -->
+    <script>
+      fbq('init', '1398924471788992');
+      fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1398924471788992&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
     
     <!-- TikTok Pixel Code -->
     <script>
